# ModernJVS

./: .gitignore  AGENTS.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DisableBluetoothPi3.sh  DisableInternalBluetoothPi.sh  Makefile  README.md  SetBluetoothSupervisionTimeout.sh  SetupModernJVS.sh  SetupUSBBluetooth.sh  cmake_install.cmake  modernjvs  version.h
.github/: copilot-instructions.md
.github/instructions/: c-code.instructions.md  webui.instructions.md
.github/workflows/: build-release.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  openjvs  version.h
build2/: Makefile
build_check/: CMakeCache.txt
debian/: postrm
docs/: SYSTEM_357_COMPATIBILITY.md  WIIMOTE_NUNCHUK_BEHAVIOR.md  guide.md  modernjvs-drivers.conf  modernjvs-webui.service  modernjvs.service  modernjvs@.service
docs/modernjvs/: config
docs/modernjvs/devices/: arduino-llc-gun4ir-pro-micro-p1  arduino-llc-gun4ir-pro-micro-p2  at-translated-set-2-keyboard  bigben-interactive-daija-arcade-stick  brook-p4-wired-gamepad-v1.6  etps-2-elantech-touchpad  g25-racing-wheel  generic-joystick  generic-keyboard  generic-mouse  generic-x-box-pad  hjz-mayflash-wiimote-pc-adapter-mouse  holdchip-usb-gaming-keyboard  jjknown  light-gun-p-1-just-to-share-fun  logitech--logitech-momo-force-  logitech-g29-driving-force-racing-wheel  logitech-logitech-driving-force  microsoft-sidewinder-force-feedback-wheel--usb-  microsoft-sidewinder-precision-racing-wheel-usb-version-1.0  microsoft-x-box-360-pad  microsoft-x-box-one-s-pad  nintendo-wii-remote  nintendo-wii-remote-plus-nunchuk  shanwan-ps3-gamepad  shanwan-ps3-pc-gamepad  sony-corp.-felica-s320-[pasori]  sony-interactive-entertainment-wireless-controller  sony-playstation-r-3-controller  thrustmaster-t.flight-hotas-  toodles-2008-cthulhu-mult  ultimarc-aimtrak  wireless-controller  xbox-360-wireless-receiver  xbox-wireless-controller
docs/modernjvs/games/: 18-wheeler  after-burner-climax  airline-pilots  alien-front  crazy-taxi  crazy-taxi-high-roller  crisis-zone  dream-raiders  f-zero-ax  f355  final-furlong-2  generic  generic-analogue  generic-driving  generic-shooting  ghost-squad  harley-king-of-the-road  hummer  initial-d  jambo-safari  king-of-route-66  lets-go-island  lets-go-jungle  lets-go-jungle-special  mario-cart  monkey-ball  ninja-assault  operation-ghost  outrun  outrun-chihiro  outrun-lindbergh  r-tuned  rambo  sega-race-tv  taiko-no-tatsujin  tekken  the-house-of-the-dead-2  the-house-of-the-dead-3  the-house-of-the-dead-4  time-crisis-2  (+8 more)
docs/modernjvs/ios/: namco-rays  namco-v329
docs/openjvs/: config
misc/: JVSSPEC.md  cli-reference.md  configuration.md  developer-test-suite.md  dietpi-automation.md  installation.md  quick-start.md  supported-hardware.md  supported-systems.md  taiko-support.md  troubleshooting.md  webui.md  what-is-jvs.md  wii-remote-support.md
scripts/: Automation_Custom_Script.sh  README.md  dietpi.txt
src/: modernjvs.c  openjvs.c  version.h.in
src/console/: cli.c  cli.h  config.c  config.h  debug.c  watchdog.c  watchdog.h
src/controller/: input.c  input.h  threading.c  threading.h
src/ffb/: ffb.c
src/hardware/: device.c  device.h  rotary.c  rotary.h
src/jvs/: io.c  io.h  jvs.c  jvs.h
src/testsuite/: test_modernjvs.c
src/webui/: addon-fit.js  modernjvs-webui  modernjvs-webui.py  xterm.js
src/webui/static/: app.js  login.css  login.js  style.css
src/webui/templates/: index.html  login.html
tests/: test_modernjvs.c
